Checkpoint of outstanding work